# BaslerTakePicture

./: README.md  test.py
src/: CMakeLists.txt  config.h.in  cvcapture.cpp  cvcapture.h  mat_converter.h  mat_converter_cv3.cpp  python_module.cpp  python_module.h
